1127 재료추가부분구현 / 공통버튼css변경 / 공통메세지함수변경 / 숫자체크메서드구현

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -45,3 +45,12 @@
 .cancel_btn:hover,.cancel_btn:focus{
     background: rgb(173, 181, 189)!important;
 }
+.confirm_white_btn{
+    color: rgb(18, 184, 134)!important;
+    border-color:rgb(18, 184, 134)!important;
+    background: rgb(255, 255, 255)!important;
+}
+.confirm_white_btn:hover,.confirm_white_btn:active{
+    color: rgb(255, 255, 255)!important;
+    background: rgb(18, 184, 134)!important;
+}
