--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -54,7 +54,34 @@
     color: rgb(255, 255, 255)!important;
     background: rgb(18, 184, 134)!important;
 }
-
+.update_btn{
+    outline: none;
+    padding: 0px;
+    border: none;
+    display: inline;
+    color: rgb(18, 184, 134);
+    text-decoration: underline;
+    background: none;
+    cursor: pointer;
+}
+.delete_btn{
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    background: rgb(255, 107, 107);
+    color: white;
+    border-radius: 4px;
+    padding: 0px 1.25rem;
+    height: 2rem;
+    font-size: 1rem;
+}
+.delete_btn:hover{
+    background: rgb(255, 135, 135);
+}
 /* CKEdito placeholder 설정*/
 .ck-placeholder{
     white-space: pre; /* pre를 사용하면 입력한 그대로 출력함 */
