--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -100,7 +100,7 @@ input[type="file"] {
     display: none;
 }
 /* 공통 입력 텍스트영역 */
-.input_textarea{
+.input_textarea {
     resize: none;
     border: 1px solid rgb(233, 236, 239);
     line-height: 1.75;
@@ -109,4 +109,137 @@ input[type="file"] {
 .separator {
     margin-left: 0.25rem;
     margin-right: 0.25rem;
+}
+
+/*-------------------------------------------
+    $ Loaders 스피너 (요청대기용)
+-------------------------------------------*/
+.loader-background {
+    background-color: rgba(249, 249, 249, 0.85);
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; /* 모달배경을 꽉차게설정 top~bottom 0 설정이유 */
+    width: 100%;
+    z-index: 9999;
+    display: flex; /* 아래는 플렉스를 이용한 가운데 정렬 */
+    justify-content: center;
+    align-items: center;
+}
+.regot-loader {
+    font-size: 20px;
+    position: fixed;
+    transform: translateX(-50%); /** fixed의 width를 고려한 정중앙위치 */
+    width: 4em;
+    height: 1em;
+    /* margin: 100px auto; */
+    top: 50%;
+    left: 50%;
+}
+
+.regot {
+    width: 1em;
+    height: 1em;
+    border-radius: 0.5em;
+    background: rgb(134, 142, 150);
+    position: absolute;
+    animation-duration: 0.5s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+}
+
+.regot1,
+.regot2 {
+    left: 0;
+}
+
+.regot3 {
+    left: 1.5em;
+}
+
+.regot4 {
+    left: 3em;
+}
+
+@keyframes show {
+    from {
+        transform: scale(0.001);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+
+@keyframes remove {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(0.001);
+    }
+}
+
+@keyframes shift {
+    to {
+        transform: translateX(1.5em);
+    }
+}
+
+.regot1 {
+    animation-name: show;
+}
+
+.regot2,
+.regot3 {
+    animation-name: shift;
+}
+
+.regot4 {
+    animation-name: remove;
+}
+
+/*-------------------------------------------
+      $ Loaders 스피너 (게시물더보기용)
+  -------------------------------------------*/
+.loader {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin: 3em;
+    display: inline-block;
+    position: relative;
+    vertical-align: middle;
+}
+.loader,
+.loader:before,
+.loader:after {
+    animation: 1s infinite ease-in-out;
+}
+.loader:before,
+.loader:after {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.loader-black {
+    background-color: #333;
+}
+
+.loader-1 {
+    animation-name: loader1;
+}
+@keyframes loader1 {
+    from {
+        transform: scale(0);
+        opacity: 1;
+    }
+    to {
+        transform: scale(1);
+        opacity: 0;
+    }
 }
